--- a/docs/Developers Manual/parts/plagiarism.tex
+++ b/docs/Developers Manual/parts/plagiarism.tex
@@ -1,5 +1,109 @@
 ﻿\chapter{A Plagiarism Primer}\label{chap:plagOverview}
+In this chapter we will give a brief overview of the most important topics to get you up to speed with the domain of the software, if you are not already familiar with it.
 
+\section{Plagiarism definition} 
+What is Plagiarism?
+
+Many people think of plagiarism as copying another's work, or borrowing someone else's original ideas. But terms like "copying" and "borrowing" can disguise the seriousness of the offense:
+According to the Merriam-Webster Online Dictionary, to "plagiarize" means
+
+    to steal and pass off (the ideas or words of another) as one's own
+    to use (another's production) without crediting the source
+    to commit literary theft
+    to present as new and original an idea or product derived from an existing source.
+
+In other words, plagiarism is an act of fraud. It involves both stealing someone else's work and lying about it afterward.
+But can words and ideas really be stolen?
+
+According to U.S. law, the answer is yes. The expression of original ideas is considered intellectual property, and is protected by copyright laws, just like original inventions. Almost all forms of expression fall under copyright protection as long as they are recorded in some way (such as a book or a computer file).
+All of the following are considered plagiarism:
+
+    turning in someone else's work as your own
+    copying words or ideas from someone else without giving credit
+    failing to put a quotation in quotation marks
+    giving incorrect information about the source of a quotation
+    changing words but copying the sentence structure of a source without giving credit
+    copying so many words or ideas from a source that it makes up the majority of your work, whether you give credit or not (see our section on "fair use" rules)
+
+Most cases of plagiarism can be avoided, however, by citing sources. Simply acknowledging that certain material has been borrowed, and providing your audience with the information necessary to find that source, is usually enough to prevent plagiarism. See our section on citation for more information on how to cite sources properly.
+
+---
+Plagiarism and collusion in students' assessed work are issues of increasing con- cern to the academic community as a whole. By plagiarism we mean the sub mission of part or all of another person's work as if it were ones own, without the knowledge of the author, and with intention to deceive. Collusion, on the other hand is the submission of work as ones own when (at least some of) that work has been done partly or wholly by another person, and that other person is party to the deception.
+1
+Plagiarism and Collusion Detection using the Smith-Waterman Algorithm
+
+----
+
+    Plagiarism occurs when a student, with intent to deceive or with reckless disregard for proper scholarly procedures, presents any information, ideas or phrasing of another as if they were his/her own and/or does not give appropriate credit to the original source. Proper scholarly procedures require that all quoted material be identified by quotation marks or indentation on the page, and the source of information and ideas, if from another, must be identified and be attributed to that source. Students are responsible for learning proper scholarly procedures.1
+
+This definition suggests that there are two kinds of plagiarism: one that is committed with the intent to deceive (intentional plagiarism) and one resulting from the disregard for proper scholarly procedures (unintentional plagiarism).
+1The Duke Community Standard in Practice: A Guide for Undergraduates 2011-12, Pages 18 and 20.
+Examples of Intentional Plagiarism
+
+    Purchasing a pre-written paper (either by mail or electronically).
+    Letting someone else write part or all of a paper for you.
+    Paying someone else to write part or all of a paper for you.
+    Submitting as your own someone else's unpublished work (including a computer program or algorithm), either with or without permission.
+    Submitting as your own, work done jointly by a group in which you may have participated.
+    Submitting work done by you, but for another class or another purpose without documenting that it was previously used.
+    Creating phony citations.
+
+
+Examples of Unintentional Plagiarism:
+
+    Failure to cite a source that is not common knowledge.
+    Failure to "quote" or block quote author's exact words, even if documented.
+    Failure to put a paraphrase in your own words, even if documented.
+    Failure to put a summary in your own words, even if documented.
+    Failure to be loyal to a source.
+
+
+
+\begin{itemize}
+\item \textbf{Copy\&paste}
+\item \textbf{Copy, shake\&paste}
+\item \textbf{Patchwriting (rewording)}
+\item \textbf{Structural plagiarism}
+\item \textbf{Translations}
+\end{itemize}
+
+
+
+
+Kurze Definition und Begriffserklaerung 
+	\subsection{History of plagiarism} 
+	Geschichtlicher Hintergrund: von den Roemern zu Wild usw. 	
+	
+	
+	Twentieth-century dictionaries define plagiarism as "wrongful appropriation," "close imitation," or "purloining and publication," of another author's "language, thoughts, ideas, or expressions," and the representation of them as one's own original work,[1][2] but the notion remains problematic with nebulous boundaries.[3][4][5][6] There is no rigorous and precise distinction between imitation, stylistic plagiarism, copy, replica and forgery.[3][4][5][6]
+
+In the 1st century, the use of the Latin word plagiarius (literally kidnapper), to denote someone stealing someone else's work, was pioneered by Roman poet Martial, who complained that another poet had "kidnapped his verses." This use of the word was introduced into English in 1601 by dramatist Ben Jonson, to describe as a plagiary someone guilty of literary theft.[7][18]
+
+The derived form plagiarism was introduced into English around 1620.[19] The Latin plagi?rius, "kidnapper", and plagium, "kidnapping", has the root plaga ("snare", "net"), based on the Indo-European root *-plak, "to weave" (seen for instance in Greek plekein, Bulgarian "?????" pleta, Latin plectere, all meaning "to weave").
+
+The modern concept of plagiarism as immoral and originality as an ideal, emerged in Europe only in the 18th century, particularly with the Romantic movement.[7][11][12] Romantic aesthetic and ideology, still retains a significant strength in the 20th century, and encourages attaks against all that violates its values of genius, originality and individuality.[20] From the Romantic perspective, artistic techniques like parody are considered parasitic.[20] For centuries before, not only literature was considered "publica materies," a common property from which anybody could borrow at will, but the encouragement for authors and artists was actually to "copy the masters as closely as possible," for which the closer the copy the finer was considered the work.[7][8][13][21][22] This was the same in literature, music, painting and sculpture. In some cases, for a writer to invent their own plots was reproached as presumptuous.[7] This stood at the time of Shakespeare too, when it was common to appreciate more the similarity with an admired classical work, and the ideal was to avoid "unnecessary invention."[7][9][10]
+
+The modern ideals for originality and against plagiarism appeared in the 18th century, in the context of the economic and political history of the book trade, which will be exemplary and influential for the subsequent broader introduction of capitalism.[23] Originality, that traditionally had been deemed as impossible, was turned into an obligation by the emerging ideology of individualism.[10][13] In 1755 the word made it into Johnson's influential A Dictionary of the English Language, where he was cited in the entry for copier ("One that imitates; a plagiary; an imitator. Without invention a painter is but a copier, and a poet but a plagiary of others."), and in its own entry denoting both A thief in literature ("one who steals the thoughts or writings of another") and The crime of literary theft.[7][24]
+
+Later in the 18th century, the Romantic movement completed the transformation of the previous ideas about literature, developing the Romantic myth of artistic inspiration, which believes in the "individualised, inimitable act of literary creation", in the ideology of the "creation from nothingness" of a text which is an "autonomous object produced by an individual genious."[5][12][22][25][26][27][28] Plagiarism has often been used as a derogatory term for parodies.[29][30]
+
+Despite the 18th century new morals, and their current enforcement in the ethical codes of academia and journalism, the arts, by contrast, not only have resisted in their long-established tradition of copying as a fundamental practice of the creative process,[12][13][14][31] but with the boom of the modernist and postmodern movements, this practice has been accelerated, spread, increased, dramatically amplifyied to an unprecedented degree, to the point that has been heightened as the central and representative artistic device of these movements.[15][16][12] Plagiarism remains tolerated by 21st century artists.[13][14] An eraly rebuttal to Romantic aesthetic in this respect, came from Russian formalism.[20]
+	
+	
+	
+	
+
+	\subsection{Progress and social acceptance} (1 Seite)
+	Entwicklung und gesellschaftliche Akzeptanz
+	Anfang mit Gutenberg / Vroni Steuber usw.
+
+	Gesellschaftliche Probleme
+	Universitaere Probleme
+	
+vroni-plag -- VroniPlag ist ein Wiki, d.h. jeder kann etwas beitragen. Und jeder, der etwas beitraegt, tut dies aus ganz persoenlichen Motiven. Es ist deshalb schwierig eine allgemeingueltige Antwort zu geben - trotzdem scheint bei vielen regelmaessigen VroniPlag Autoren eher die Sorge um die Wissenschaft im Vordergrund zu stehen und nicht parteipolitische Ueberlegungen. Siehe auch Frage zum Thema Motivation. 
+
+
+\newpage
 \section{Basic Classification of Plagiarisms}
 
 %Please be careful, the sections below are actually Debbies own categorizations taken from here http://plagiat.htw-berlin.de/softwareutility/
@@ -10,8 +114,550 @@
 \subsection{Structural plagiarism}
 \subsection{Translations}
 
+
+
+\newpage
 \section{How to detect plagiarism}
-\subsection{Software systems}
-\subsection{Human approach}
+Plagiarism detection means a lot of effort and hard work, because a lot of documents, books and papers must be found, scanned and compared line for line. Often it is really complicated to find available sources in libraries or scientific database systems and plenty of pages must be copied by hand. 
+During the last ten years a lot of software companies came into market to automatize this process and developed algorithms to find plagiarisms automatically. These systems are called "Plagiarism detection systems (PDS) ". 
+There are two different approaches for plagiarism detection systems to identify plagiarism in text documents:
+\begin{enumerate}
+\item \textbf{Corpus based analysis}\\
+means to "compare suspicious documents against a set of potential original documents" PAN'07
+to find similar text passages.
+\item \textbf{Intrinsic analysis}\\
+"identifies potentially plagiarized passages by analyzing the suspicious document with respekt to changes in writing style". PAN'07
+\end{enumerate}
+These computer assisted detection systems alone are not appropriate to find all plagiarisms without human judgement.  
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/4-steps.png}
+  }
+  \caption{4-stage plagiarism detection process}
+  \label{fig:4-stage plagiarism detection process}
+\end{figure}
+
+We found out that the most practical way is to combine both approaches - the first step is to use the computer-based detection to find similarities between the suspicious documents and the original papers. The second step is to examine the results, validate them and continue the search in a deeper level. (see figure 4 stage)
+
+
+
+(Culwin, Fintan; Lancaster, Thomas (2001), "Plagiarism issues for higher education", Vine 31 (2): 36-41, doi:10.1108/03055720010804005)
+
+\newpage
+\subsection{Commercial software systems} 
+
+ 
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/overview.png}
+  }
+  \caption{Overview of Commercial Detection Systems}
+  \label{fig:overview_systems}
+\end{figure}
+
+
+
+Several computer companys developed commercial software systems to faciliate the detection of plagiarism. They offer different terms of pricing and online as a service or offline programs. 
+The software system compare digital content from the internet or different types of databases. 
+They seek for similarities, report suspicious parts and try to answer the question if the present text is a plagiarism or not.
+
+This chapter covers parts of the results of the big "Plagiarism Detection System Test 2010". 
+The following benchmarking was done by Prof. Debora Weber-Wulff at the University of Applied Sciences HTW Berlin and her plagiarism team in 2010. 
+The entire benchmarking includes 26 of the 47 available systems on the market and gives an overview of the strenghts and weaknesses of these systems in finding plagiarism.
+
+We used the top 5 "partially useful" software systems in this  benchmarking to overview the market and find the best usable features for our own system to simplify the daily work of plagiarism finders. 
+\newpage
+\subsubsection{PlagAware} 
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/plagaware_1.png}
+  }
+  \caption{Plagaware Website}
+  \label{fig:plagawareWebsite}
+\end{figure}
+
+
+\textbf{Plagaware Business Promotion}
+\begin{quote}
+"PlagAware is an online-service, which offers services around the topics Searching, finding, analysing and tracing of plagiarisms. The central element of PlagAware is a search engine, which is specialised in detecting identical contents of given texts. Contrary to the plagiarism scanning with classical search engines, the places of finding are not directly transferred to the user, but analysed on the rate and the type of analogy, before a message to the user is written. By this the differing result reports of PlagAware allow to recognise very fast the percentage and the distribution of the copied text contents, thus permitting an efficient and secure rating of a possible plagiarism."  
+\end{quote}
+\enquote{PlagAware Business Promotion}\citep{PlagAware Website} \href{http://www.plagaware.de}{PlagAware}
+
+
+
+PlagAware is software company from Ulm in Germany. The website is online for nearly 5 years and is the top-ranked system in the HTW "Plagiarism Detection System Test" 2010, but in fact it still detect only 61,11\% of the plagiarism cases. 
+Although PlagAware "produces excellent documentation of the plagiarism found, highlighting the commonalities in a side-by-side presentation. However, its usefulness at university is limited, as each file must be uploaded individually - no ZIP file or student-submission is possible. The system was not designed to be used in a university setting, but rather to find plagiarisms of online texts, which is important for sites trying to optimize their search machine ranking, as plagiarism will contribute to downranking." \href{http://plagiat.htw-berlin.de/software-en/2010-2/s10-05-plagaware/}{Plagiat Website}
+
+Figure Overview shows an overview of all fragments and the results of the plagiarism detection. In figure Side-by-side shows a nice side-by-side fragment view, where all found plagiarisms are shown with different colors. Anomalies in the text are highlighted and the barcode-view is available.
+ 
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/plagaware_2.png}
+  }
+  \caption{Plagaware overview}
+  \label{fig:plagawareoverview}
+\end{figure}
+
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/plagaware_3.png}
+  }
+  \caption{Plagaware side-by-side view}
+  \label{fig:plagaware_side_by_side}
+\end{figure}
+
+
+\newpage
+\subsubsection*{PlagAware Costs}
+PlagAware has four different payment-models:
+\begin{enumerate}
+\item \textbf{Free}\\
+30 scans/month for free. Every additional scan costs 3,0 ct. 
+\item \textbf{Light}\\
+EUR 2,99/month. 150 scans/month included. Every additional scan costs 2,0 ct. Mininum term of 6 month.
+\item \textbf{Standard}\\
+EUR 7,49/month. 500 scans/month included. Every additional scan costs 1,5 ct. Mininum term of 6 month.
+\item \textbf{Premium}\\
+EUR 14,99/month. 1500 scans/month included. Every additional scan costs 1ct. Mininum term of 6 month.
+\end{enumerate}
+
+
+
+\newpage
+\subsubsection{Turnitin} 
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/turnitin_1.png}
+  }
+  \caption{Turnitin Website}
+  \label{fig:Turnitin Website}
+\end{figure}
+
+\textbf{Business Promotion}
+\begin{quote}
+"Our award-winning solution discourages plagiarism and facilitates rich, meaningful feedback that improves writing skills, promotes critical thinking, and streamlines grading."
+\end{quote}
+\enquote{Turnitin}\citep{Turnitin Business Promotion}\href{http://www.turnitin.com}{Turnitin}
+
+
+Turnitin is a product by a company called iParadigms. It is a well-known US plagiarism software system and one of the most used plagiarism detection systems in the education sector. The website is online for nearly 13 years and the system is at the second position in the HTW "Plagiarism Detection System Test" 2010.  
+
+Die besten Ergebnisse erhaelt man durch Material, das bereits in deren Datenbank vorhanden ist. Plagiatsauffaelligkeiten werden auf dem Text farblich markiert und die Hauptquelle wird angezeigt.
+Was nicht so gut ist, ist das auch viele winzige Uebereinstimmungen gefunden werden, wie in einem englischen Text das englische Wort "of".
+
+
+In the past the had a lot of problems to deal with umlauts, and having a complex setup. They improved a lot of parts especially the german translation. Still a big problem for european countries is the copyright policy of Turnitin. They still storing copies of user material in their database without a permission. \href{http://plagiat.htw-berlin.de/software-en/2010-2/s10-01-turnitin/}{Plagiat Website}
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/turnitin_3.png}
+  }
+  \caption{Turnitin - A lot of little matches can't be found, if the sensibility has not been raised.}
+  \label{fig:Turnitin overview}
+\end{figure}
+ 
+In 2008 the system was placed at the 13th position. The reason of this change is that the others systems have gotten worse. Turnitin has still problems of flagging spam sites especially when this sites are not safe for work (e.g. site with pornography content).(figure porn) On the other hand the search algorithm of Turnitin is storing sites in their database although they are still not exist.
+\href{http://plagiat.htw-berlin.de/software-en/2010-2/s10-01-turnitin/}{Plagiat Website}
+
+
+\subsubsection*{Costs}
+There are different license models for the education sector and the cost depends on the amount of users . 
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/turnitin_4.png}
+  }
+  \caption{Turnitin - A lot of spam-sites are reported. Not all sufficient to use at work. This is one of the harmless examples.}
+  \label{fig:Turnitin overview}
+\end{figure}
+
+
+
+
+
+
+\newpage
+
+\subsubsection{Ephorus}
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/euphorus_1.png}
+  }
+  \caption{Ephorus Website}
+  \label{fig:plagawareWebsite}
+\end{figure}
+
+\textbf{Business Promotion}
+\begin{quote}
+"Never search for plagiarism yourself again? An end to all irritations and qualitatively better papers? No problem. With Ephorus, you can prevent plagiarism with no extra effort. Moreover, with this anti-plagiarism market leader, you will be assured of the best service and the lowest prices. With Ephorus, teaching will be fun again! Would you like to try out Ephorus?
+\end{quote}
+\enquote{Ephorus Business Promotion}\citep{Euphorus Website} \href{http://www.ephorus.com}{Ephorus}
+
+
+The third position in the HTW "Plagiarism Detection System Test" 2010 is Euphorus. It's a plagiarism detection system from the netherlands and the website is online for nearly 8 years.
+2007 it took the first place in the test, 2008 it was only position 8. Now they redisigned and reorganized the system and old problems were solved. The usability of reports and the whole handling of the system very good. (figure: report)But their still problems with umlauts and the european copyright problematic like in Turnitin. (figure: umlauts)
+
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/euphorus_3.png}
+  }
+  \caption{Ephorus report - gives a great overview of the results}
+  \label{fig:Ephorus_report}
+\end{figure}
+
+
+
+
+\subsubsection*{Ephorus costs}
+Not stated.
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/euphorus_5.png}
+  }
+  \caption{Ephorus Problem with umlauts}
+  \label{fig:Euphorus_umlauts}
+\end{figure}
+
+
+
+
+
+
+
+
+
+
+
+
+
+\newpage
+\subsubsection{PlagScan} 
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/plagscan_1.png}
+  }
+  \caption{Plagscan Website}
+  \label{fig:plagawareWebsite}
+\end{figure}
+
+
+\textbf{Business Promotion}
+\begin{quote}
+\textbf{PlagScan stands for professionalism}
+\begin{itemize}
+\item All documents are treated 100\% confidential
+\item    You control whether your document is checked against others, or not
+\item    Integration via API in your existing CMS or learning management system possible
+\end{itemize}
+\textbf{Plagiarism check as easy as pie: PlagScan}
+\begin{itemize}
+\item    Annotations directly in the document, check without additional work
+\item    No installation - complete functionality in every browser
+ \item   All popular formats can be processed
+\end{itemize}
+\textbf{Save time with PlagScan}
+\begin{itemize}
+\item    Check several documents in parallel.
+\item    Fully automated document analysis.
+ \item   No use of your resources, all computation is carried out on our servers.
+\end{itemize}
+
+\end{quote}
+\enquote{Plagscan Business Promotion}\citep{Plagscan Website} \href{http://www.plagscan.com}{Plagscan}
+
+Plagscan is a software company from Mainz, Germany. It placed at position number 4 in the HTW "Plagiarism Detection System Test" 2010. The website is online for 3 years and in the preview check 2008 it came to the 10th position.
+As a user you have to buy "Plag Points" (PP). One test costs 1 PP per 100 words. 
+The administrator sets up users and assigns them points for use.
+There are three different kinds of reports - a list of possible sources with links to click on, the submitted document with the suspicious areas linked to a possible source, and a docx file with the sources in comments.
+There's no side-by-side presentation, so it's not possible to compare the fragments.
+Although there are still problems, PlagScan was first place in usability, but only 8th place in overall effectiveness with only 60\% of the points awarded for finding plagiarisms.
+
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/plagscan_2.png}
+  }
+  \caption{Plagscan report is clear and tidy.}
+  \label{fig:plagaware report}
+\end{figure}
+
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/plagscan_3.png}
+  }
+  \caption{Plagscan reports are not self-explanatory.}
+  \label{fig:plagaware report 2}
+\end{figure}
+
+\subsubsection{Plagscan costs}
+PlagScan has four different payment-models without a contract:
+\begin{enumerate}
+\item \textbf{9 Euro}\\
+500 Plagpoint - 50.000 words - 200 Sites. 
+\item \textbf{19 Euro}\\
+1.250 Plagpoints - 125.000 words - 500 Sites. 
+\item \textbf{29 Euro}\\
+2.000 Plagpoints - 200.000 words - 800 Sites. .
+\item \textbf{69 Euro}\\
+5.000 Plagpoints - 500.000 words - 2.000 Sites. 
+\end{enumerate}
+
+
+
+
+
+
+
+
+
+
+\newpage
+\subsubsection{Urkund}
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/urkund_1.png}
+  }
+  \caption{Urkund Website}
+  \label{fig:Urkund Website}
+\end{figure}
+
+\textbf{Business Promotion}
+\begin{quote}
+"URKUND was born from the academic world. A team of teachers developed the idea of a web based service that would help them detect and deter plagiarism and URKUND was born in the fall of 2000. The problem of plagiarism received much attention in the media and more and more began realise the scope of the problem and the need of a tool to support the pedagogical work. URKUND continued to grow and develop over the years and came to be recognised as Sweden's foremost anti plagiarism service.
+
+Today, URKUND is present in our neighbouring countries and continental Europe as well as the USA, Asia and the Middle East.
+
+URKUND is a natural part of the educational work of the academic world today. Both faculty and students are aware of the immediate and long term benefits of our system."
+\end{quote}\enquote{Urkund Business Promotion}\citep{Urkund Website} \href{http://www.urkund.com}{Urkund}
+
+
+Urkund is the last system in our comparison of partially useful systems. It ranked at the 5th position in the HTW "Plagiarism Detection System Test" 2010. The company is from sweden and started their business in 2000. In this test it ranked high in effectiveness but on the other side it's not easy to use. It has problems in the translation and after the redesign 2008 the usability was going worse.
+Overall "the navigation is confusing, the layout at times catastrophic with texts overlapping fields,  the printed reports could be better, the error messages are cryptic, and the link descriptions are unclear."\enquote{Plagiat Team HTW}\citep{Plagiat Team HTW}
+
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/urkund_2.png}
+  }
+  \caption{Urkund List view}
+  \label{fig:Urkund_list_view}
+\end{figure}
+
+ \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/software_systems/urkund_3.png}
+  }
+  \caption{Urkund Report}
+  \label{fig:urkund_report}
+\end{figure}
+
+\subsubsection{Urkund costs}
+Not stated.
+
+
+\newpage
+
+\subsubsection{Resume commercial software systems}
+
+
+
+Es gibt zwar von Jahr zu Jahr mehr Softwareprodukte, die von sich behaupten, einen Text 
+zuverlaessig daraufhin zu ueberpruefen, ob es sich um ein Plagiat handelt oder nicht. Aber: Diese Systeme haben nach temporaerer Besserung inzwischen wieder an Qualitaet verloren. Zu diesem ernuechternden Ergebnis kommen wir bei der  vierten Untersuchung von Softwareprodukten zur Plagiatserkennung. Besonders pikant: Einige der Systeme werden von hoechst zweifelhaften Unternehmen angeboten, darunter auch von solchen, die Ghostwriting anbieten.
+
+Im Test von 2010 - die vorherigen Tests fanden 2004, 2007 und 2008 statt - haben wir 26 Plagiaterkennungssysteme unter die Lupe genommen. Es gab auf dem Markt zwar 47 die wir finden konnten, aber wir mussten aus Zeitgruenden vorerst die Kollusionserkennungssysteme und die Systeme zur Erkennung von Plagiaten in Programmcode zurueckstellen. Auch Systeme, fuer die wir kein Zugang bekommen konnten (unter anderem Systeme, die veraergert waren, dass sie in vergangenen Tests so schlecht abgeschnitten haben), haben wir nicht testen koennen.  Fuer die Pruefung wurden neue Testfaelle in Englisch und Japanisch entwickelt und jedes System mit 42 kurzen Essays konfrontiert. Darueber hinaus wurden die Benutzerfreundlichkeit der Systeme und die Professionalitaet der Unternehmen bewertet.
+
+
+
+
+Fazit: Die auf dem Markt angebotenen Plagiatserkennungsysteme lassen sich derzeit drei Kategorien zuordnen: teilweise nuetzlich, kaum brauchbar und nutzlos. Teilweise nuetzliche Systeme koennen dann gut verwendet werden, wenn mit Hilfe einer Suchmachine und drei bis fuenf Woertern eines verdaechtigen Absatzes bereits erste Plagiatsindizien erbracht wurden. In diesen Faellen helfen Systeme wie PlagAware, Turnitin, Ephorus, PlagScan oder Urkund dabei, groessere Sicherheit zu gewinnen. Doch selbst die besten Systeme finden hoechstens 60 bis 70 Prozent der plagiierten Anteile. Eine ganze Reihe von weiteren Systemen sind hingegen kaum brauchbar. In der Kategorie der nutzlosen Systeme haben wir eine Reihe von Betruegern ausfindig gemacht.
+
+Unsere Empfehlung: Plagiatserkennungssysteme sollten nur bei konkretem Verdacht verwendet werden, statt die Studierenden unter Generalverdacht zu stellen. Parallel dazu sollte der Focus an Hochschulen und Schulen staerker auf der Aufklaerung liegen: Was ist ein Plagiat, warum darf nicht plagiiert werden und wie arbeitet man richtig? Dies sei sinnvoller als zuviel Zeit in die Durchsuchung von eingereichten Arbeiten bzw. in die Vermeidung von Fehlalarmen zu investieren.
+
+---
+Prof. Dr. Debora Weber-Wulff, professor for media and computing at the University of Applied Sciences HTW Berlin has tested plagiarism detection systems in 2004, 2007, and 2008 and has published widely on the topic. In this fourth test series that was just completed at the end of 2010, 26 systems out of 47 available systems were closely examined. Particular focus was given to seeing how well the systems detect a known amount of plagiarism, and how they react when offered original material.
+
+In 2008 the systems fared slightly better on the test, but in 2010 many have lost the ability to detect plagiarisms that have been slightly edited - word orders switched, words dropped or added, or synonyms used. The best systems only reached a grade of C-, not quite reaching 70\% of the possible points.
+
+The 2010 test included not only short essays in German, but also ones in English and Japanese. Additionally, a usability metric was calculated that took into account aspects such as design, language consistency, navigation, print quality of the reports, and how well the system fits into the workflow of a university. A new professionalism metric includes giving a real street address and the name of a contact person; not advertising for paper mills or ghostwriting services; answering the phone during normal business hours and not installing malware on the computer under the guise of installing the detection software.
+
+The systems were categorized as partially useful, barely useful, and useless for university purposes. The best systems with between 60 and 70\% effectiveness are PlagAware, Turnitin, Ephorus, PlagScan and Urkund.
+
+Our recommendation: Only use these systems when suspicions of plagiarism arise that cannot be found with 3-5 words in a search machine. The focus should be on teaching students about plagiarism and how to avoid it instead of investing time in using software. Most of the work involved later is in preparing a plagiarism case and dealing with the plagiator, and for this good documentation is needed. Very few systems provide good documentation.
+
+
+
+
+
+\newpage
+\subsection{Free tools and techniques}
+
+	\textbf{simtext}
+	\textbf{Google-Search}
+
+	 \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/googlesearch.png}
+  }
+  \caption{Google Search}
+  \label{fig:Google Search}
+\end{figure}
+
+
+
+
+
+
+\newpage
+
 
 \section{Vroni Plag}
+Erklaerung was ist Vroni Plag....woraus entstanden, welche Mitglieder usw.
+Das ist nicht genau bekannt, da man sich fuer eine Mitarbeit nicht anmelden muss. Es gab am 18.3.2012 6335 Seiten im Wiki, 189 verschiedene Accounts haben schon mal editiert, 21 Leute sind als Admins eingetragen, und es gibt 3 Buerokraten, die Rechte vergeben koennen. 
+
+Das VroniPlag Wiki ist ein am 28. Maerz 2011[2] auf Wikia gegruendetes Wiki, das verschiedene Hochschulschriften - hauptsaechlich Dissertationen - untersucht, die unter Plagiatsverdacht geraten sind. Die Untersuchungen fuehrten in mehreren Faellen zur Aberkennung des Doktorgrades.
+
+VroniPlag Wiki, das die Idee des GuttenPlag Wikis adaptiert, ist nach Edmund Stoibers Tochter Veronica benannt, deren Dissertation als erste untersucht[3] und der infolge dessen der Doktorgrad aberkannt wurde.[4] Bis Februar 2012 erhoehte sich die Zahl der namentlich genannten untersuchten Arbeiten auf 18, darunter einige von Politikern.
+
+Der Gruender von VroniPlag ist Martin Heidingsfelder.
+
+Alte und Junge, Maenner und Frauen, Wissenschaftler und Nicht-Wissenschaftler aus allen moeglichen Orten. 
+
+
+Die Wiki-Beitragenden haben unterschiedliche Motivationen und Ziele, manche behalten diese fuer sich. Viele Wiki-Beitragende wenden sich mit der Plagiatsdokumentation gegen akademisches und wissenschaftliches Fehlverhalten. Durch die Plagiatsdokumentation erlangt das Thema "Plagiat" Aufmerksamkeit. Diskussionen werden angeregt, und es entsteht ein Problembewusstsein, das der qualitativen Verbesserung von wissenschaftlichen Arbeiten dienlich ist. Textsynopsen dienen der Meinungsbildung und legen unterschiedliche Vorgehenstechniken bei woertlichen und sinngemaessen Plagiaten offen. In der speziellen Art, im Umfang, und in der Haeufigkeit von Plagiaten offenbaren sich verschiedene Defizite in der Qualitaet von Dissertations und Habilitationsschriften, Defizite in deren Bewertung und Defizite in der Betreuung der Kandidaten. Einige Wiki-Beitragende leiten aus der oeffentlichkeit der Dokumentation eine Praeventionswirkung ab, welche hilft, Plagiatsfaelle in der Zukunft zu vermeiden. Manche interessieren sich nur fuer ganz bestimmte Plagiatsfaelle. Der/die eine oder andere mag ein besonderes Interesse an der Aberkennung eines zu Unrecht verliehenen Doktorgrads haben. Auch wissenschaftliche Interessen (Plagiatsforschung) werden vertreten. Im Sinne einer Rezension klaert die Plagiatsdokumentation ueber die Zitierbarkeit von Werken und die Originalitaet von deren Inhalten auf. 
+
+Wissenschaftsplagiate sind unzureichend kenntlich gemachte woertliche und sinngemaesse uebernahmen aus anderen Texten in wissenschaftlichen Schriften. Oft wird dadurch ein wissenschaftlicher Erkenntnisgewinn vorgetaeuscht oder fruehere Ideen fremder Autoren erscheinen als vermeintlich neue eigene Ideen. Wissenschaftsplagiate fuehren dazu, dass wissenschaftliche Arbeiten ihren wesentlichen Zweck verfehlen: Neue Erkenntnisse hervorzubringen. Sie fuehren dazu, dass falsche Autoren zitiert und verfaelschte, verwaesserte, unreflektierte, und manchmal unrichtige Inhalte wiedergegeben werden. Sie konterkarieren den Fortschritt. Sie fuehren zur Verschwendung von Forschungsgeldern. Sie haben auch zur Folge, dass ungeeignete Personen wissenschaftliche Fuehrungspositionen erlangen. Aus diesen Gruenden ist Redlichkeit in der Wissenschaft so wichtig. 
+	\subsection{Activities}
+	
+	Das VroniPlag Wiki ist ein am 28. Maerz 2011[2] auf Wikia gegruendetes Wiki, das verschiedene Hochschulschriften - hauptsaechlich Dissertationen - untersucht, die unter Plagiatsverdacht geraten sind. Die Untersuchungen fuehrten in mehreren Faellen zur Aberkennung des Doktorgrades.
+
+VroniPlag Wiki, das die Idee des GuttenPlag Wikis adaptiert, ist nach Edmund Stoibers Tochter Veronica benannt, deren Dissertation als erste untersucht[3] und der infolge dessen der Doktorgrad aberkannt wurde.[4] Bis Februar 2012 erhoehte sich die Zahl der namentlich genannten untersuchten Arbeiten auf 18, darunter einige von Politikern.
+
+Der Gruender von VroniPlag ist Martin Heidingsfelder.	
+	
+	
+
+		\subsubsection{Ergbnisreport}
+		Fuer die Vorlage an den Ausschuss
+	 \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/page-numbers.png}
+  }
+  \caption{Page numbers}
+  \label{fig:page numbers}
+\end{figure}
+
+
+	\subsubsection{Barcode analysis}
+	
+	 \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/barcode.png}
+  }
+  \caption{Barcode analysis}
+  \label{fig:plagawareWebsite}
+\end{figure}
+	
+	
+
+
+	\subsubsection{Plagiarism page analysis}
+	
+	 \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/fragments.png}
+  }
+  \caption{fragments}
+  \label{fig:fragments}
+\end{figure}
+
+
+	 \begin{figure}[!h]
+  \centering
+  \fbox{
+    \includegraphics[width=0.97\textwidth]{images/colors.png}
+  }
+  \caption{colors}
+  \label{fig:colors}
+\end{figure}
+
+
+	
+
+
+\subsection{Pros vs. Cons} 
+	
+%http://plagiat.htw-berlin.de/software/
+%http://www.f4.htw-berlin.de/~weberwu/classes/HTW/projects/Plagiarism-Detection-Cockpit.shtml
+%http://www.guardian.co.uk/books/2005/nov/23/comment.stephenmoss
+%http://de.vroniplag.wikia.com/wiki/Home
+%http://de.guttenplag.wikia.com/wiki/GuttenPlag_Wiki
+
+
+
+
+%weitere Literatur
+%h1. Plagiarism Papers
+%
+%This page is a categorized collection of papers on plagiarism. 
+%
+%* http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=1306552 Is there a HTW account for IEEE?
+%* http://ieeexplore.ieee.org/xpl/freeabs_all.jsp?arnumber=28038 Is there a HTW account for IEEE, maybe in the lib?
+%* http://jucs.org/jucs_12_8/plagiarism_a_survey/jucs_12_08_1050_1084_maurer.pdf
+%* http://dl.acm.org/citation.cfm?id=1328976 [purchase]
+%* http://dl.acm.org/citation.cfm?id=1944681
+%* http://dl.acm.org/citation.cfm?id=1150522 [purchase]
+%
+%
+%h2. Intrinsic Plagiarism Detection
+%
+%* http://www.springerlink.com/content/x7x483u1k3970863/ [purchase] - can we get access somehow?
+%* http://www.icsd.aegean.gr/lecturers/Stamatatos/papers/PAN2009.pdf
+%* http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.142.9615&rep=rep1&type=pdf
+%* http://users.dsic.upv.es/~prosso/resources/PAN09.pdf#page=61
+%
+%
+%h2. Multilingual
+%
+%* http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.143.1752&rep=rep1&type=pdf
+%
+%
+%h2. Workflow and automated detection
+%
+%* http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.120.3708&rep=rep1&type=pdf
+%* http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.107.178&rep=rep1&type=pdf
+%* http://asiapacific-odl.oum.edu.my/C33/F428.pdf
+%
+%
+%h2. Debbie
+%
+%* https://komm-in.uni-hohenheim.de/fileadmin/einrichtungen/agrar/Studium/Plagiate/strategien_plagiate.pdf
+%* http://plagiat.htw-berlin.de/softwareutility/ - Good overview of possible techniques for plagiarism detection
